--- a/liquibase/mongodb.yaml
+++ b/liquibase/mongodb.yaml
@@ -1,58 +1,51 @@
-databaseChangeLog: 
+databaseChangeLog:
   - changeSet:
-      id: satwell:1
-      author: satwell@harness.io
-      comment: I really want another column 
+      id: devteam:1
+      author: devteam@company.com
+      comment: Create users collection
       changes:
         - createCollection:
-            collectionName: pets
-            options:
-              validator:
-                  $jsonSchema:
-                    bsonType: object
-                    required:
-                    - name
-                    - species
-                  properties:
-                    name:
-                      bsonType: string
-                      description: "The Name"
-                    species:
-                      bsonType: string
-                      description: "cat, dog, or other"                    
-              validationAction: warn
-              validationLevel: strict
+            collectionName: users
   - changeSet:
-      id: satwell:13
-      author: satwell@harness.io
-      ignore: false
-      context: example-context
-      comment: add an index
+      id: devteam:2
+      author: devteam@company.com
+      comment: Add unique index on email
       changes:
         - createIndex:
-            collectionName: pets
-            keys: '{name: 1}'
-            options: '{unique: false, name: "idx_name"}'
+            collectionName: users
+            keys: '{email: 1}'
+            options: '{unique: true, name: "idx_email_unique"}'
   - changeSet:
-      id: satwell:14-base
-      author: satwell@harness.io 
+      id: devteam:3
+      author: devteam@company.com
+      ignore: false
+      context: production
+      comment: Add compound index for user queries
+      changes:
+        - createIndex:
+            collectionName: users
+            keys: '{status: 1, createdAt: -1}'
+            options: '{name: "idx_status_created", background: true}'
+  - changeSet:
+      id: devteam:4-base
+      author: devteam@company.com
       ignore: false
       changes:
         - createCollection:
-            collectionName: TripPair
+            collectionName: orders
   - changeSet:
-      id: satwell:14-index
-      author: satwell@harness.io 
+      id: devteam:4-index
+      author: devteam@company.com
       ignore: false
       changes:
         - createIndex:
-            collectionName: TripPair
-            keys: '{"PairingDuty.PairingDutyFlightLeg.FlightLegId": 1, "CancelInd": 1, "StatInd": 1, "PairingDuty.PairingDutyFlightLeg.DhdInd": 1, "PairCls": 1, "StartDt": 1}'
-            options: '{name: "TripPair_Idx17"}'
+            collectionName: orders
+            keys: '{"userId": 1, "status": 1, "orderDate": -1, "totalAmount": 1}'
+            options: '{name: "orders_user_status_idx"}'
   - changeSet:
-      id: satwell:15
-      author: satwell@harness.io
-      comment: create plants table
+      id: devteam:5
+      author: devteam@company.com
+      comment: Create products collection
       changes:
         - createCollection:
-            collectionName: plants
+            collectionName: products
