Update and rename liquibase/multienv.yml to liquibase/sample/multienv.yml

--- a/liquibase/sample/multienv.yml
+++ b/liquibase/sample/multienv.yml
@@ -33,6 +33,10 @@ databaseChangeLog:
       rollback:
         - dropTable:
             tableName: person
+  - includeAll:
+      path: sql
+      logicalFilePath:  ""
+      relativeToChangelogFile: true
   - changeSet:
       id: my.poc:2
       author: my.poc
@@ -654,4 +658,3 @@ databaseChangeLog:
         - dropTable:
             tableName: demo_table      
       rollback: []
-      
